Sat May  3 00:07:55 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* small mpsr Changes to reflect some name changes of MP Dicts

	* configure.in Makefile.in: new schem for updating Makefile mod2.h
	  based on time-stamps 

Fri May  2 17:29:32 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* mpsr.h: reflected changes of MP version 1.1.2 (Dicts in MP.h)

	* Fixed small bug in configure.in

Mon Apr 28 21:00:07 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* Added README, INSTALL, COPYING file to distribution

	* tesths.cc (main): slightly changed Singular banner; fixed
	  display of version number

Fri Apr 25 16:59:31 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* fixed configure.in s.t. sprintf test is correct

	* Changed SingularPath to SINGULARPATH

	* fixed sys/times.h and sys/time.h confusion

	* Various changes to reflect new configure (versions defined in
	  configure.in, changed HAVE_LIBFACTORY into HAVE_FACTORY, data
	  dir is pasted from configure into mod2.h and used from there in
	  feFopen. 

	* Added configure facility, repalced mod2.h by mod2.h.in Makefile
	  by Makefile.in 

Fri Apr 18 09:47:22 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* silink.cc (DumpAsciiIdhdl): LIB string is dumped without type
	  declaration 

	* mpsr_Get.cc (InitIdentifierLeftv): used mpsr_SetCurrRing(r,
	  TRUE) so that pOne works if no ring did previously exist.

	* iparith.cc: Added jjPROC3.

Tue Apr 15 12:07:17 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* silink.cc (slStandardInit): changed Ascii type specifyer from
	  "ascii" to "Ascii" for consistency

	* iparith.cc : added #else branch to #ifdef HAVE_FGLM in proc table

	*  (extra.cc): system("sh",command) returns exit status of command
